--- a/cv.html
+++ b/cv.html
@@ -401,7 +401,7 @@ content:"...";
 								<!-- 如果用户选择的身份是教育经历 -->
 									<span class="shenfen">
 										<i></i>
-										客户端开发主程 · 上海黑之白信息科技有限公司
+										React Native Specialist · bindo labs
 									</span>
 								<!-- 否则根据用户是否是应届毕业生区分用户的身份 -->
 						</div>
@@ -415,9 +415,9 @@ content:"...";
 						</div>
 						<div class="mr_sns">
 						<!--   -------------------社交账号     -----------------       -->
-							<a href="https://github.com/q6112345" target="_blank" data-sns="6" data-site="https://github.com/q6112345"><span><em></em></span></a>
-							<a href="https://www.linkedin.com/in/taishx/" target="_blank" data-sns="4" data-site="https://www.linkedin.com/in/taishx/"><span><em></em></span></a>
-							<a href="https://twitter.com/q6112345" target="_blank" data-sns="1" data-site="https://twitter.com/q6112345"><span><em></em></span></a>
+							<a href="https://github.com/zhangtaii" target="_blank" data-sns="6" data-site="https://github.com/zhangtaii"><span><em></em></span></a>
+							<a href="https://www.linkedin.com/in/zhangtaii" target="_blank" data-sns="4" data-site="https://www.linkedin.com/in/zhangtaii"><span><em></em></span></a>
+							<a href="https://twitter.com/zhangtaii" target="_blank" data-sns="1" data-site="https://twitter.com/zhangtaii"><span><em></em></span></a>
 						</div>
 					</div>
 				</div>
@@ -436,6 +436,23 @@ content:"...";
 							</div>
 							<div class="mr_moudle_content">
 							<div class="list_show">
+								<div class="mr_jobe_list">
+								<div class="clearfixs">
+									<div class="mr_content_l">
+										<div class="l1">
+											<img src="http://www.lagou.com/image1/M00/1B/8A/Cgo8PFUi9NOATYQcAABqbzJRruY412.png" alt="bindo labs"/>
+										</div>
+										<div class="l2">
+											<h4>bindo labs</h4>
+											<span>React Native Specialist</span>
+										</div>
+									</div>
+									<div class="mr_content_r">
+										<span>2017.09 -- 2017.10</span>
+									</div>
+								</div>
+
+								</div>
 								<div class="mr_jobe_list">
 								<div class="clearfixs">
 									<div class="mr_content_l">
